--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,11 +1,72 @@
 body {
-  background-color: black;
+  /* background-color: #f05a28; */
   margin: 0;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .site-container {
   width: 100vw;
   height: 100vh;
   margin: 0 auto;
-  background-color: aliceblue;
+}
+
+.menubar {
+  width: 100vw;
+  height: 60px;
+  position: fixed;
+  top: 20px;
+  z-index: 100;
+}
+
+.menu-items {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.menu-items ul {
+  padding: 0;
+  margin: 0;
+}
+
+.menu-items ul li {
+  list-style-type: none;
+  padding: 20px;
+  margin: 0;
+  display: inline-block;
+  float: left;
+  color: white;
+  text-transform: uppercase;
+  font-weight: 100;
+  font-size: 14px;
+  letter-spacing: 2px;
+}
+
+.menu-items a {
+  text-decoration: none;
+  color: black;
+  transition: .2s;
+}
+
+.menu-items a:hover {
+  text-decoration: none;
+  color: #f05a28;
+}
+
+#home {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  display: block;
+  position: relative;
+  background-image: url("../assets/images/joanna-kosinska-1.jpg");
+  background-size: cover;
+}
+
+#aboutus {
+  background-color: violet;
+  height: 100vh;
+  margin: 0;
+  display: block;
+  position: relative;
+  background-image: url("/assets/images/joanna-kosinska-1.jpg");
 }
