--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,72 +1,328 @@
-body {
-  /* background-color: #f05a28; */
-  margin: 0;
-  font-family: 'Open Sans', sans-serif;
+/* ////////////////////////////////GENERAL/////////////////////////////// */
+html {
+    font-family: 'Open Sans', sans-serif;
+    scroll-behavior: smooth;
 }
 
-.site-container {
-  width: 100vw;
-  height: 100vh;
-  margin: 0 auto;
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
+
+.wrapper {
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+}
+
+.container {
+    max-width: 1200px;
+    height: auto;
+    margin: 0 auto;
+}
+/* ////////////////////////////////GENERAL/////////////////////////////// */
+
+
+
+
+/* ////////////////////////////////HEADER//////////////////////////////// */
+
+/* QUICK CONTACT */
+
+.q-cont {
+    width: 100%;
+    height: 50px;
+    background-color: #20242E;
+}
+
+.q-cont p {
+    margin: 0;
+}
+
+.q-cont a {
+    position: relative;
+    display: inline-block;
+    color: white;
+    text-decoration: none;
+    font-size: 0.9em;
+    margin: 15px 25px 15px 10px;
+}
+
+.flex-box {
+    width: 1200px;
+    height: auto;
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+}
+.contacts {
+    text-align: left;
+    width: 50%;
+}
+.smedia {
+    text-align: right;
+    width: 50%;
+}
+
+.orange {
+    color: #E94E1B;
+    font-size: 1.2em;
+    vertical-align: middle;
+}
+
+/* MENU BAR */
+
+menu {
+    width: 100%;
+    height: 100px;
+    margin: 0;
+    padding: 0;
+    background-color: #151723;
+}
+
+.logo {
+    width: 200px;
+    height: auto;
+    padding: 29px 0;
+    position: relative;
+    display: block;
+    float: left;
 }
 
 .menubar {
-  width: 100vw;
-  height: 60px;
-  position: fixed;
-  top: 20px;
-  z-index: 100;
+    position: absolute;
+    width: 600px;
+    height: auto;
+    right: 0;
+}
+.menubar ul{
+    display: inline-flex;
+    padding: 0;
+    margin: 0;
+    float: right;
 }
 
-.menu-items {
-  width: 1200px;
-  margin: 0 auto;
+.menubar ul li {
+    display: inline-block;
+    list-style-type: none;
+    font-size: .9em;
+    margin: 0;
+    height: 100px;
 }
 
-.menu-items ul {
-  padding: 0;
-  margin: 0;
+.menubar ul li a {
+    display: block;
+    position: relative;
+    text-decoration: none;
+    padding: 40px 20px;
+    color: white;
+    transition: 0.3s;
 }
 
-.menu-items ul li {
-  list-style-type: none;
-  padding: 20px;
-  margin: 0;
-  display: inline-block;
-  float: left;
-  color: white;
-  text-transform: uppercase;
-  font-weight: 100;
-  font-size: 14px;
-  letter-spacing: 2px;
+.menubar ul li a:hover {
+    color: #E94E1B;
 }
 
-.menu-items a {
-  text-decoration: none;
-  color: black;
-  transition: .2s;
+.servmenu {
+    margin-top: 50px;
+    opacity: 0;
+    transition: .2s ease-in-out;
 }
 
-.menu-items a:hover {
-  text-decoration: none;
-  color: #f05a28;
+.servmenu ul {
+    width: 180px;
+    height: auto;
+    display: none;
+    position: absolute;
+    background-color: #151723;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, .5);
 }
 
-#home {
-  height: 100vh;
-  width: 100vw;
-  margin: 0;
-  display: block;
-  position: relative;
-  background-image: url("../assets/images/joanna-kosinska-1.jpg");
-  background-size: cover;
+.servmenu ul li {
+    position: relative;
+    height: 20px;
+    margin: 0;
+    padding: 0;
+    display: block;
+    font-size: 1em;
+    padding: 15px 15px 0 15px;
 }
 
+.servmenu ul li:last-child {
+    padding: 15px;
+}
+
+.servmenu ul li a{
+    position: relative;
+    display: block;
+    margin: 0;
+    padding: 0;
+}
+
+.servmenu ul li a:last-child{
+    padding: 0px;
+}
+
+.menubar ul li:hover .servmenu ul{
+    display: block;
+    opacity: 1;
+    margin-top: 0;
+}
+
+.menubar ul li:hover .servmenu {
+    margin-top: 0;
+    opacity: 1;
+    transition: .5s;
+}
+/* ////////////////////////////////HEADER//////////////////////////////// */
+
+
+
+
+/* /////////////////////////////////HOME///////////////////////////////// */
+.home {
+    width: 100%;
+    height: calc(100vh - 150px);
+    background-image: url("../img/home2.jpg");
+    background-size: cover;
+    background-position-y: 50%;
+}
+
+.home-text {
+    width: 600px;
+    height: calc(100vh - 150px);
+    display: block;
+    position: absolute;
+}
+
+.home-text-box {
+    height: auto;
+    position: absolute;
+    bottom: 80px;
+}
+
+.home-text P {
+    color: #E94E1B;
+    margin-bottom: 30px;
+    font-weight: 300;
+    font-size: 1.2em;
+    margin-top: 0;
+}
+
+.home-text h1 {
+    margin: 0;
+    padding: 0;
+    color: white;
+    font-weight: 300;
+    font-size: 4em;
+    line-height: 1.2em;
+}
+
+.button {
+    padding: 8px 15px;
+    border: 1px solid #E94E1B;
+    color: white;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-top: 20px;
+    font-size: .8em;
+    font-weight: 300;
+    transition: .3s;
+}
+
+.button:hover {
+    background-color: #E94E1B;
+    margin-left: 5px;
+}
+/* /////////////////////////////////HOME///////////////////////////////// */
+
+
+
+/* ///////////////////////////////ABOUT US/////////////////////////////// */
 #aboutus {
-  background-color: violet;
-  height: 100vh;
-  margin: 0;
-  display: block;
-  position: relative;
-  background-image: url("/assets/images/joanna-kosinska-1.jpg");
+    width: 100%;
+    height: 600px;
+    background-color: #151723;
 }
+
+.about-text-box {
+    position: relative;
+    height: 300px;
+    top: 150px;
+    /* transform: translateY(-50%); */
+}
+
+.abtustext {
+    position: relative;
+    display: block;
+    width: 40%;
+    height: 250px;
+    float: left;
+}
+
+.abtustext P {
+    color: #E94E1B;
+    margin-bottom: 30px;
+    font-weight: 300;
+    font-size: 1.2em;
+    margin: 0 0 10px;
+}
+
+.bold {
+    font-weight: 700;
+}
+
+.abtustext h1 {
+    margin: 0;
+    padding: 0;
+    color: white;
+    font-weight: 300;
+    font-size: 4em;
+    line-height: 1.2em;
+}
+
+.abtus-techs {
+    display: block;
+    position: relative;
+    width: 60%;
+    height: 250px;
+    float: right;
+}
+
+.abtus-techs-parts {
+    width: 33.33%;
+    height: 300px;
+    display: block;
+    float: left;
+    box-sizing: border-box;
+    border-right: 1px solid #20242E;
+    padding: 20px;
+}
+
+.abtus-techs-parts h2 {
+    font-weight: 300;
+    font-size: 2em;
+    color: #E94E1B;
+    margin: 0;
+}
+
+.abtus-techs-parts p {
+    color: white;
+    font-weight: 300;
+    font-size: .9em;
+    line-height: 2em;
+}
+/* ///////////////////////////////ABOUT US/////////////////////////////// */
+
+
+
+/* //////////////////////////////TECHNOLOGY////////////////////////////// */
+
+#techno {
+    width: 100%;
+    height: 100vh;
+}
+
+/* //////////////////////////////TECHNOLOGY////////////////////////////// */
+
+
