--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,9 +17,37 @@ html {
 
 .container {
     max-width: 1200px;
-    height: auto;
+    height: 100%;
+    display: block;
     margin: 0 auto;
+    position: relative;
 }
+
+.paratext {
+    font-size: 1em;
+    color: rgb(181, 187, 201);
+    line-height: 2em;
+    font-weight: 300;
+    hyphens: none;
+}
+
+.downarrow {
+    text-align: center;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    display: block;
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: 0.3s ease-in-out;
+}
+
+.downarrow:hover {
+    bottom: 60px;
+}
+
+
 /* ////////////////////////////////GENERAL/////////////////////////////// */
 
 
@@ -29,6 +57,15 @@ html {
 
 /* QUICK CONTACT */
 
+.header {
+    display: block;
+    width: 100%;
+    height: auto;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    transition: .5s ease-in-out;
+}
 .q-cont {
     width: 100%;
     height: 50px;
@@ -78,6 +115,7 @@ menu {
     margin: 0;
     padding: 0;
     background-color: #151723;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, .5);
 }
 
 .logo {
@@ -126,7 +164,7 @@ menu {
 .servmenu {
     margin-top: 50px;
     opacity: 0;
-    transition: .2s ease-in-out;
+    transition: .3s ease-in-out;
 }
 
 .servmenu ul {
@@ -182,7 +220,7 @@ menu {
 /* /////////////////////////////////HOME///////////////////////////////// */
 .home {
     width: 100%;
-    height: calc(100vh - 150px);
+    height: 100vh;
     background-image: url("../img/home2.jpg");
     background-size: cover;
     background-position-y: 50%;
@@ -241,31 +279,29 @@ menu {
 /* ///////////////////////////////ABOUT US/////////////////////////////// */
 #aboutus {
     width: 100%;
-    height: 600px;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     background-color: #151723;
 }
 
-.about-text-box {
+.content-middle {
     position: relative;
-    height: 300px;
-    top: 150px;
-    /* transform: translateY(-50%); */
+    height: 400px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .abtustext {
     position: relative;
     display: block;
     width: 40%;
-    height: 250px;
+    height: auto;
     float: left;
-}
-
-.abtustext P {
-    color: #E94E1B;
-    margin-bottom: 30px;
-    font-weight: 300;
-    font-size: 1.2em;
-    margin: 0 0 10px;
+    padding-right: 30px;
+    box-sizing: border-box;
 }
 
 .bold {
@@ -285,8 +321,11 @@ menu {
     display: block;
     position: relative;
     width: 60%;
-    height: 250px;
+    height: 100%;
     float: right;
+    background-image: url(../img/client.jpg);
+    background-size: cover;
+    /* background-origin: border-box; */
 }
 
 .abtus-techs-parts {
@@ -296,7 +335,7 @@ menu {
     float: left;
     box-sizing: border-box;
     border-right: 1px solid #20242E;
-    padding: 20px;
+    padding: 0 20px 20px 20px;
 }
 
 .abtus-techs-parts h2 {
@@ -305,20 +344,13 @@ menu {
     color: #E94E1B;
     margin: 0;
 }
-
-.abtus-techs-parts p {
-    color: white;
-    font-weight: 300;
-    font-size: .9em;
-    line-height: 2em;
-}
 /* ///////////////////////////////ABOUT US/////////////////////////////// */
 
 
 
 /* //////////////////////////////TECHNOLOGY////////////////////////////// */
 
-#techno {
+#services {
     width: 100%;
     height: 100vh;
 }
