--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,7 +62,114 @@ html {
     margin-bottom: 0;
 }
 
+.section-h1 {
+    text-align: left;
+    margin: 0;
+    padding: 0;
+    color: white;
+    font-weight: 300;
+    font-size: 4em;
+    line-height: 1.2em;
+}
 
+.section-h1-orange {
+    text-align: left;
+    margin: 0;
+    padding: 0;
+    color: #E94E1B;
+    font-weight: 300;
+    font-size: 4em;
+    line-height: 1.2em;
+}
+
+.button {
+    padding: 8px 15px;
+    border: 1px solid #E94E1B;
+    color: white;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-top: 20px;
+    font-size: .8em;
+    font-weight: 300;
+    transition: .3s;
+}
+
+.button:hover {
+    background-color: #E94E1B;
+    margin-left: 5px;
+}
+
+.button-dark {
+    padding: 8px 15px;
+    border: 1px solid #E94E1B;
+    color: black;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-top: 20px;
+    font-size: .8em;
+    font-weight: 300;
+    transition: .3s;
+}
+
+.button-dark:hover {
+    background-color: #E94E1B;
+    color: white;
+    margin-left: 5px;
+}
+
+.content-left {
+    position: relative;
+    display: block;
+    width: 35%;
+    height: auto;
+    float: left;
+    padding-right: 30px;
+    box-sizing: border-box;
+}
+
+.content-right {
+    display: block;
+    position: relative;
+    width: 65%;
+    height: 100%;
+    float: right;
+    overflow: hidden;
+}
+
+.img-cover {
+    width: 100%;
+    vertical-align: middle;
+}
+
+.right-one-third {
+    width: 33.33%;
+    height: 100%;
+    display: block;
+    float: left;
+    box-sizing: border-box;
+    border-left: 1px solid #E94E1B;
+    padding: 0 20px 20px 20px;
+}
+
+.right-one-third h2 {
+    font-weight: 300;
+    font-size: 1.5em;
+    color: #E94E1B;
+    margin: 0;
+}
+
+.content-middle {
+    position: relative;
+    height: 400px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.icons {
+    height: 15%;
+    padding-bottom: 15px;
+}
 /* ////////////////////////////////GENERAL/////////////////////////////// */
 
 
@@ -140,7 +247,7 @@ menu {
     box-shadow: 0px 5px 15px rgba(0, 0, 0, .5);
 }
 
-.logo {
+.logo1 {
     width: 50%;
     height: auto;
     padding: 29px 0;
@@ -148,6 +255,17 @@ menu {
     display: block;
     float: left;
     opacity: 1;
+    transition: .3s ease-in-out;
+}
+
+.logo2 {
+    width: 80%;
+    height: auto;
+    padding: 12px 0;
+    position: relative;
+    display: none;
+    float: left;
+    opacity: 0;
     transition: .3s ease-in-out;
 }
 
@@ -247,6 +365,8 @@ menu {
     opacity: 1;
     transition: .5s;
 }
+
+
 /* ////////////////////////////////HEADER//////////////////////////////// */
 
 
@@ -282,49 +402,9 @@ menu {
     margin-top: 0;
 }
 
-.home-text h1 {
-    margin: 0;
-    padding: 0;
-    color: white;
-    font-weight: 300;
-    font-size: 4em;
-    line-height: 1.2em;
-}
 
-.button {
-    padding: 8px 15px;
-    border: 1px solid #E94E1B;
-    color: white;
-    border-radius: 5px;
-    text-decoration: none;
-    margin-top: 20px;
-    font-size: .8em;
-    font-weight: 300;
-    transition: .3s;
-}
 
-.button:hover {
-    background-color: #E94E1B;
-    margin-left: 5px;
-}
 
-.button-dark {
-    padding: 8px 15px;
-    border: 1px solid #E94E1B;
-    color: black;
-    border-radius: 5px;
-    text-decoration: none;
-    margin-top: 20px;
-    font-size: .8em;
-    font-weight: 300;
-    transition: .3s;
-}
-
-.button-dark:hover {
-    background-color: #E94E1B;
-    color: white;
-    margin-left: 5px;
-}
 
 
 /* /////////////////////////////////HOME///////////////////////////////// */
@@ -341,64 +421,10 @@ menu {
     background-color: #151723;
 }
 
-.content-middle {
-    position: relative;
-    height: 400px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.abtustext {
-    position: relative;
-    display: block;
-    width: 40%;
-    height: auto;
-    float: left;
-    padding-right: 30px;
-    box-sizing: border-box;
-}
-
 .bold {
     font-weight: 700;
 }
 
-.abtustext h1 {
-    margin: 0;
-    padding: 0;
-    color: white;
-    font-weight: 300;
-    font-size: 4em;
-    line-height: 1.2em;
-}
-
-.abtus-techs {
-    display: block;
-    position: relative;
-    width: 60%;
-    height: 100%;
-    float: right;
-    background-image: url(../img/client.jpg);
-    background-size: cover;
-    /* background-origin: border-box; */
-}
-
-.abtus-techs-parts {
-    width: 33.33%;
-    height: 300px;
-    display: block;
-    float: left;
-    box-sizing: border-box;
-    border-right: 1px solid #20242E;
-    padding: 0 20px 20px 20px;
-}
-
-.abtus-techs-parts h2 {
-    font-weight: 300;
-    font-size: 2em;
-    color: #E94E1B;
-    margin: 0;
-}
 /* ///////////////////////////////ABOUT US/////////////////////////////// */
 
 
@@ -408,16 +434,6 @@ menu {
 #services {
     width: 100%;
     height: 100vh;
-}
-
-#services h1 {
-    margin: 0;
-    padding: 0;
-    color: #E94E1B;
-    font-weight: 300;
-    font-size: 3em;
-    text-align: center;
-    line-height: 1.2em;
 }
 
 .service {
@@ -433,3 +449,23 @@ menu {
 /* //////////////////////////////TECHNOLOGY////////////////////////////// */
 
 
+/* ////////////////////////////////FOOTER//////////////////////////////// */
+.footer {
+    width: 100%;
+    height: auto;
+    background-color: #151723;
+}
+
+.footer-content {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.footer-item {
+    width: 23%;
+    height: 250px;
+    background-color: antiquewhite;
+}
+/* ////////////////////////////////FOOTER//////////////////////////////// */
