--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,11 +16,11 @@ html {
 }
 
 .container {
+    position: relative;
+    display: block;
     max-width: 1200px;
     height: 100%;
-    display: block;
     margin: 0 auto;
-    position: relative;
 }
 
 .paratext {
@@ -191,6 +191,7 @@ html {
 .q-cont {
     width: 100%;
     height: 50px;
+    margin: 0 auto;
     background-color: #20242E;
 }
 
@@ -208,7 +209,7 @@ html {
 }
 
 .flex-box {
-    width: 1200px;
+    width: 100%;
     height: auto;
     position: absolute;
     display: flex;
@@ -248,9 +249,9 @@ menu {
 }
 
 .logo1 {
-    width: 50%;
+    width: 40%;
     height: auto;
-    padding: 29px 0;
+    padding: 24px 0;
     position: relative;
     display: block;
     float: left;
@@ -259,7 +260,7 @@ menu {
 }
 
 .logo2 {
-    width: 80%;
+    width: 40%;
     height: auto;
     padding: 12px 0;
     position: relative;
@@ -275,7 +276,7 @@ menu {
 
 .menubar {
     position: absolute;
-    width: 600px;
+    width: 60%;
     height: auto;
     right: 0;
 }
